--- a/landingpage/web/css/styles.css
+++ b/landingpage/web/css/styles.css
@@ -1643,3 +1643,56 @@ select {
 .close-button:hover {
 	background-color: #fff !important;
 }
+.subscribe-wrapper .subscribe-form {
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+.subscribe-wrapper .subscribe-form input {
+	max-width: 410px;
+	width: 100%;
+	border-radius: 50px;
+	padding: 25px 30px;
+	background: rgba(255, 255, 255, 0.12);
+	border: 2px solid #fff;
+	color: #fff;
+	margin-right: 20px;
+	margin-bottom: 30px;
+}
+
+.subscribe-wrapper .subscribe-form input::placeholder {
+	color: #fff;
+	opacity: 1;
+}
+
+.subscribe-wrapper .subscribe-form button {
+	padding: 25px 40px;
+	background: #fff;
+	color: #286ade;
+	margin-bottom: 30px;
+}
+
+.main-btn {
+	display: inline-block;
+	font-weight: 700;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	user-select: none;
+	padding: 18px 48px;
+	font-size: 18px;
+	border-radius: 50px;
+	color: #fff;
+	cursor: pointer;
+	z-index: 5;
+	transition: all 0.4s ease-in-out;
+	border: none;
+	background: #286ade;
+	overflow: hidden;
+}
+
+.main-btn:hover {
+	color: #fff;
+}
