--- a/landingpage/web/css/styles.css
+++ b/landingpage/web/css/styles.css
@@ -1611,33 +1611,36 @@ select {
 }
 /* end of min-width 1200px */
 .shadow-button {
-	background-color: #000000;
+	background-color: #00aae3 !important;
 	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 	transition: all 0.3s ease 0s;
-	border-color: #000000 !important;
+	border-color: #00aae3 !important;
 	outline: none;
 }
 
 .shadow-button:hover {
-	background-color: #000000;
+	background-color: #00aae3 !important;
 	box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
 	color: #fff;
-	border-color: #000000 !important;
+	border-color: #00aae3 !important;
 	transform: translateY(-7px);
 }
 
 .shadow-button-purple {
-	background-color: #6ec1e4;
+	background-color: #00aae3 !important;
 	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 	transition: all 0.3s ease 0s;
 	outline: none;
+	color: #fff !important;
+	border-color: #00aae3 !important;
 }
 
 .shadow-button-purple:hover {
-	background-color: #6168ff !important;
+	background-color: #00aae3 !important;
 	box-shadow: 0px 15px 20px rgba(46, 73, 229, 0.4);
 	color: #fff !important;
 	transform: translateY(-7px);
+	border-color: #00aae3 !important;
 }
 
 .close-button:hover {
@@ -1689,10 +1692,11 @@ select {
 	z-index: 5;
 	transition: all 0.4s ease-in-out;
 	border: none;
-	background: #286ade;
+	background-color: #fff !important;
 	overflow: hidden;
 }
 
 .main-btn:hover {
 	color: #fff;
+	background-color: #fff !important;
 }
