--- a/landingpage/web/css/styles.css
+++ b/landingpage/web/css/styles.css
@@ -548,16 +548,16 @@ select {
 }
 
 .cards-1 .card-icon.blue {
-	background: url("../images/services-icon-bg-blue.png") center center no-repeat;
+	background: url("../images/services-icon-bg-blue-tf.svg") center center no-repeat;
 }
 
 .cards-1 .card-icon.yellow {
-	background: url("../images/services-icon-bg-yellow.png") center center
+	background: url("../images/services-icon-bg-yellow.svg") center center
 		no-repeat;
 }
 
 .cards-1 .card-icon.red {
-	background: url("../images/services-icon-bg-red.png") center center no-repeat;
+	background: url("../images/services-icon-bg-red.svg") center center no-repeat;
 }
 
 .cards-1 .card-icon .fas,
@@ -958,7 +958,7 @@ select {
 .basic-2 .text-container {
 	padding: 5rem 1.5rem 5rem 1.5rem;
 	border-radius: 28px;
-	background: url("../images/invitation-background.jpg") center center no-repeat;
+	background: url("../images/invitation-background-tf.svg") center center no-repeat;
 	background-size: cover;
 }
 
@@ -1658,7 +1658,7 @@ select {
 	width: 100%;
 	border-radius: 50px;
 	padding: 25px 30px;
-	background: rgba(255, 255, 255, 0.12);
+	background: #04659940;
 	border: 2px solid #fff;
 	color: #fff;
 	margin-right: 20px;
@@ -1667,13 +1667,14 @@ select {
 
 .subscribe-wrapper .subscribe-form input::placeholder {
 	color: #fff;
+	font-weight: bold;
 	opacity: 1;
 }
 
 .subscribe-wrapper .subscribe-form button {
 	padding: 25px 40px;
 	background: #fff;
-	color: #286ade;
+	color: #38023b;
 	margin-bottom: 30px;
 }
 
